Add some initial content and an app file

--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -30,7 +30,7 @@
 {% block contents %}
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">{{ embed(roots.app_title) }}</a>
+          <a class="navbar-brand" href="#">Nick DeRobertis, Ph.D.</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -67,9 +67,9 @@
               <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
               <div class="container">
                 <div class="carousel-caption text-left">
-                  <h1>Example headline.</h1>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                  <h1>Finance Expert and Researcher</h1>
+                  <p>Focusing on market intervention, alternative assets, and behavioral finance</p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Research</a></p>
                 </div>
               </div>
             </div>
@@ -77,9 +77,9 @@
               <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Another example headline.</h1>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                  <h1>Effective Teacher and Communicator</h1>
+                  <p>Experienced in teaching hundreds of students across multiple courses both in-person and online</p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Courses</a></p>
                 </div>
               </div>
             </div>
@@ -87,9 +87,11 @@
               <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption text-right">
-                  <h1>One more for good measure.</h1>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                  <h1>Data Scientist and Full-Stack Software Engineer</h1>
+                  <p>Highly proficient at extracting insights from data</p>
+                  <p>Maintainer of dozens of open-source packages, experienced in creating full web applications</p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Skills</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Software Projects</a></p>
                 </div>
               </div>
             </div>
