Layout basically working with new component template structure

--- a/nick_derobertis_site/landing/components/card/component.html
+++ b/nick_derobertis_site/landing/components/card/component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-4">
+<div style="text-align: center">
     <img class="rounded-circle" src="{{ model.image_path }}" alt="Generic placeholder image" width="140" height="140">
     <h2>{{ model.heading }}</h2>
     <p>{{ model.body_text }}</p>
