Restructure to provide page service to card component and add navigation button to card component. Layout is getting messed up for some reason

--- a/nick_derobertis_site/landing/components/card/component.html
+++ b/nick_derobertis_site/landing/components/card/component.html
@@ -3,6 +3,6 @@
     <h2>{{ model.heading }}</h2>
     <p>{{ model.body_text }}</p>
     {% if model.link %}
-        <p><a class="btn btn-secondary" href="{{ model.link }}" role="button">View details &raquo;</a></p>
+        {{ embed(button) }}
     {% endif %}
 </div>
