--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -24,6 +24,8 @@
 
 <title>Nick DeRobertis' Personal Website</title>
 
+<script src="https://kit.fontawesome.com/79b690d2bc.js" crossorigin="anonymous"></script>
+
 {% endblock %}
 
 <!-- goes in body -->
