--- a/nick_derobertis_site/landing/components/card/component.html
+++ b/nick_derobertis_site/landing/components/card/component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
-    <img class="rounded-circle" src="{{ model.image_path }}" alt="Generic placeholder image" width="140" height="140">
+    <i class="{{ model.icon_class_str }}" aria-hidden="true"></i>
     <h2>{{ model.heading }}</h2>
     <p>{{ model.body_text }}</p>
     {% if model.link %}
