Add carousel images and styles

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -21,6 +21,12 @@
   display: contents;
 }
 
+.carousel-item > img {
+  opacity: 35%;
+  object-position: center;
+  object-fit: cover;
+}
+
 // Bootstrap variable overrides
 $body-bg: #fbfcfd;
 
