--- a/nick_derobertis_site/templates/home/home_template.css
+++ b/nick_derobertis_site/templates/home/home_template.css
@@ -24,7 +24,7 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
-  background-color: #777;
+  background-color: black;
 }
 .carousel-item > img {
   position: absolute;
