--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -29,8 +29,21 @@
   width: 75px;
 }
 
-.software-card-img {
+.software-card-img.software-card-img {
   max-height: 250px;
+  margin: 20px 0px 20px 20px;
+  width: 20%;
+}
+
+.software-card-header-wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.software-card-header-text-wrapper {
+  margin-left: 20px;
 }
 
 // Bootstrap variable overrides
@@ -53,9 +66,8 @@ $theme-colors: (
   padding-bottom: 3rem;
   margin-bottom: 0;
   background-color: #fff;
-}
-@media (min-width: 768px) {
-  .jumbotron {
+
+  @include media-breakpoint-up(md) {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
@@ -71,4 +83,20 @@ $theme-colors: (
 
 .jumbotron .container {
   max-width: 40rem;
+}
+
+.software-card {
+  @include media-breakpoint-up(lg) {
+    min-height: 500px;
+  }
+  @include media-breakpoint-up(xl) {
+    min-height: 400px;
+  }
+}
+
+.software-card-img-placeholder {
+  font-size: 5em;
+  @include media-breakpoint-up(lg) {
+    font-size: 3em;
+  }
 }
