--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -46,6 +46,28 @@
   margin-left: 20px;
 }
 
+.nd-logo {
+  width: 45px;
+  height: 45px;
+}
+
+.navbar-toggler {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+}
+
+.nav-icon {
+  padding: 0.46875rem 1rem;
+  margin-top: 2px;
+  text-align: center;
+}
+
+// Utility classes
+.width-unset {
+  width: unset !important;
+}
+
 // Bootstrap variable overrides
 $body-bg: #fbfcfd;
 
@@ -54,6 +76,31 @@ $theme-colors: (
 );
 
 @import "bootstrap-material/scss/bootstrap-material-design";
+
+// Set variables based on bootstrap variables
+
+// Background for logo
+$logo-bg: map-get(
+  $map: $theme-colors,
+  $key: "primary",
+);
+// ND part of logo color
+$logo-fg: white;
+
+.nd-logo-background {
+  fill: $logo-bg;
+}
+
+.nd-logo-foreground {
+  fill: $logo-fg;
+}
+
+.navbar-nav {
+  @include media-breakpoint-up(md) {
+    flex: 1;
+    justify-content: space-between;
+  }
+}
 
 .carousel-item > img {
   opacity: 35%;
