--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -46,22 +46,44 @@
   margin-left: 20px;
 }
 
-.software-banner {
-  background-color: black;
+@mixin page-banner($bgColor: black, $height: 30rem) {
+  background-color: $bgColor;
   margin-bottom: 0;
   position: relative;
-  min-height: 30rem;
+  min-height: $height;
 }
 
-.software-banner > img {
+@mixin page-banner-img($opacity: 35%, $height: 30rem) {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 30rem;
-  opacity: 35%;
+  height: $height;
+  opacity: $opacity;
   object-position: center;
   object-fit: cover;
+}
+
+.software-banner {
+  @include page-banner;
+}
+
+.software-banner > img {
+  @include page-banner-img;
+}
+
+.research-banner {
+  @include page-banner;
+}
+
+.research-banner > img {
+  @include page-banner-img;
+}
+
+.research-pane-container {
+  padding: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .nd-logo {
@@ -79,6 +101,26 @@
   padding: 0.46875rem 1rem;
   margin-top: 2px;
   text-align: center;
+}
+
+.research-category-img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 3px;
+}
+
+.research-category {
+  height: 65px;
+  width: 65px;
+  margin: 15px;
+  text-align: center;
+}
+
+.research-pane {
+}
+
+.research-header-description-container {
+  padding: 15px;
 }
 
 // Utility classes
@@ -164,4 +206,8 @@ $logo-fg: white;
   @include media-breakpoint-up(lg) {
     font-size: 3em;
   }
+}
+
+.featurette-heading.research-heading {
+  margin-top: 0;
 }
