Add banner to software page

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -74,7 +74,11 @@
 }
 
 .software-banner > img {
-  @include page-banner-img;
+  @include page-banner-img($opacity: 50%);
+}
+
+.software-banner-content-container {
+  @include banner-content-container;
 }
 
 .research-banner {
