WIP on implementation of skills page. Static nested dropdowns are showing up and working, need to get recursive child dropdowns working

--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -45,4 +45,31 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $( window ).on( "load", function() {
+          // TODO: determine bokeh event to avoid using setTimeout to trigger custom jQuery
+          //
+          // As little as 50 ms seems to work locally, but set to 500 ms in case it is
+          // slower in production. It would be better to use an event from bokeh or
+          // panel to trigger this but I couldn't find one
+          setTimeout(function() {
+            // Enable nested dropdowns
+            $('.dropdown-menu a.dropdown-toggle').on('click', function(e) {
+              if (!$(this).next().hasClass('show')) {
+                $(this).parents('.dropdown-menu').first().find('.show').removeClass("show");
+              }
+              var $subMenu = $(this).next(".dropdown-menu");
+              $subMenu.toggleClass('show');
+                    $(this).parents('li.nav-item.dropdown.show').on('hidden.bs.dropdown', function(e) {
+                $('.dropdown-submenu .show').removeClass("show");
+              });
+              return false;
+            });
+          }, 500);
+        });
+
+
+
+
+    </script>
 {% endblock %}
