--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -28,6 +28,24 @@
   display: contents;
 }
 
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu a::after {
+  transform: rotate(-90deg);
+  position: absolute;
+  right: 6px;
+  top: 0.8em;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-left: 0.1rem;
+  margin-right: 0.1rem;
+}
+
 .software-card-github-button {
   width: 90px;
 }
