Simplify dropdown component to simplest working example

--- a/nick_derobertis_site/landing/components/skills_pane/skills_widget/skills_widget_dropdown/component.html
+++ b/nick_derobertis_site/landing/components/skills_pane/skills_widget/skills_widget_dropdown/component.html
@@ -1,16 +1,14 @@
 <div class="dropdown show">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       {{ model.title }} {{ model.level }}
     </a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">Science</a></li>
-      <li><a class="dropdown-item" href="#">Commerce</a></li>
-      <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Arts</a>
+      <li class="dropdown-submenu">
+        <a class="dropdown-item dropdown-toggle" href="#">Arts</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">History</a></li>
           <li><a class="dropdown-item" href="#">Geography</a></li>
           <li><a class="dropdown-item" href="#">Sociology</a></li>
-
         </ul>
       </li>
     </ul>
