Nested dropdown styles working appropriately in skills widget. Only spacing remains

--- a/nick_derobertis_site/landing/components/skills_pane/skills_widget/component.html
+++ b/nick_derobertis_site/landing/components/skills_pane/skills_widget/component.html
@@ -1,3 +1,5 @@
-{% for item in model.items %}
-  {{ embed(item) }}
-{% endfor %}
+<div class="skills-widget-wrapper">
+  {% for item in model.items %}
+    {{ embed(item) }}
+  {% endfor %}
+</div>
