--- a/nick_derobertis_site/landing/components/skills_pane/component.html
+++ b/nick_derobertis_site/landing/components/skills_pane/component.html
@@ -1,6 +1,7 @@
 <div class="row featurette">
-    <div class="col-md-3">
-      <h2 class="featurette-heading">Skills<span class="text-muted">Browse skills by category</span></h2>
+    <div class="col-md-3 d-flex flex-column justify-content-center">
+      <h2 class="featurette-heading">Highly Skilled in...</h2>
+      <p class="lead skills-pane-description">Browse {{ model.num_skills }} skills by category. Click the dropdowns to see nested skills.</p>
     </div>
     <div class="col-md-9">
       {{ embed(model.widget) }}
