--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -138,6 +138,27 @@
   text-align: center;
 }
 
+.story-cover {
+  opacity: 40%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  object-position: center;
+}
+
+.story-page-container {
+  background-color: black;
+  position: relative;
+}
+
+.story-page-content-container {
+  padding-top: 100px;
+  padding-bottom: 50px;
+  color: white;
+  position: relative;
+}
+
 .research-category-img {
   width: 50px;
   height: 50px;
