Keep FA icon from getting too large in software card on courses page

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -309,6 +309,10 @@ $course-card-max-width: 300px;
   min-height: unset;
 }
 
+.courses-software-wrapper .software-card-img-placeholder {
+  font-size: 3em;
+}
+
 .courses-topics-section-container {
   width: 100%;
   padding: 20px 0;
