--- a/nick_derobertis_site/landing/components/awards_pane/component.html
+++ b/nick_derobertis_site/landing/components/awards_pane/component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-12">
-    <h2 class="featurette-heading">Awards</h2>
-    <div class="awards-container">
+    <h2 class="featurette-heading awards-heading">Awards</h2>
+    <div class="awards-container d-flex flex-wrap justify-content-around">
       {% for award in model.awards %}
-        {{ embed(award) }}
+        {{ embed(award, css_classes=['width-unset']) }}
       {% endfor %}
     </div>
   </div>
