--- a/nick_derobertis_site/landing/components/awards_pane/award/component.html
+++ b/nick_derobertis_site/landing/components/awards_pane/award/component.html
@@ -1,18 +1,28 @@
 <div class="card award-container">
   <div class="award-images-container">
-    {{ model.image_src }}
-    {% if model.logo_svg_text %}
-      <div class="award-specific-image-wrapper">
-        {{ model.logo_svg_text }}
-       </div>
-    {% else %}
-      <i class="award-specific-fa-wrapper {{ model.logo_fa_class_str }}"></i>
-    {% endif %}
-    <small class="award-received">{{ model.received }}</small>
+    <div class="award-image-wrapper d-flex justify-content-center align-items-center">
+      {{ model.image_src }}
+    </div>
+    <div class="award-image-wrapper d-flex justify-content-center align-items-center">
+      {% if model.logo_svg_text %}
+        <div class="award-specific-image-wrapper">
+          {{ model.logo_svg_text }}
+         </div>
+      {% else %}
+        <i class="award-specific-fa-wrapper {{ model.logo_fa_class_str }}"></i>
+      {% endif %}
+    </div>
+    <div class="award-image-wrapper d-flex justify-content-center">
+      <small class="award-received">{{ model.received }}</small>
+    </div>
   </div>
   <div class="award-description-container">
     {% for line in model.description_lines %}
-      <p class="award-description text-uppercase">{{ line }}</p>
+      {% if loop.first %}
+        <h6 class="award-header">{{ line }}</h6>
+      {% else %}
+        <p class="award-description">{{ line }}</p>
+      {% endif %}
     {% endfor %}
   </div>
 </div>
