--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -46,6 +46,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript">
+            // Enables nested dropdowns
             $('body').on('click', '.dropdown-menu a.dropdown-toggle', function(e) {
               if (!$(this).next().hasClass('show')) {
                 $(this).parents('.dropdown-menu').first().find('.show').removeClass("show");
@@ -56,6 +57,17 @@
                 $('.dropdown-submenu .show').removeClass("show");
               });
               return false;
+            });
+
+            // Enables PDF buttons
+            // See nick_derobertis_site.general.widgets.button.PDFButtonBase
+            $('body').on('click', '.has-pdf', function(e) {
+              var pdfContent = this.dataset.pdfSrc;
+              var pdfIframe = "<iframe width='100%' height='100%' src='" + pdfContent + "'></iframe>"
+              var newPage = window.open();
+              newPage.document.open();
+              newPage.document.write(pdfIframe);
+              newPage.document.close();
             });
 
 
