--- a/nick_derobertis_site/landing/components/skills_pane/component.html
+++ b/nick_derobertis_site/landing/components/skills_pane/component.html
@@ -1,4 +1,4 @@
-<div class="row featurette">
+<div class="row featurette" id="skills-pane">
     <div class="col-md-3 d-flex flex-column justify-content-center">
       <h2 class="featurette-heading">Highly Skilled in...</h2>
       <p class="lead skills-pane-description">Browse {{ model.num_skills }} skills by category. Click the dropdowns to see nested skills.</p>
