Implement contact pane

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -573,6 +573,18 @@ $award-image-width: 125px;
   margin-bottom: 0.8em;
 }
 
+.contact-heading.contact-heading {
+  margin-top: 0;
+}
+
+.contact-button-wrapper {
+  margin: 5rem;
+}
+
+.contact-button-icon {
+  margin-right: 0.5rem;
+}
+
 .jumbotron {
   padding-top: 3rem;
   padding-bottom: 3rem;
