Implement loading spinner on page switch and initial page load

--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -24,6 +24,10 @@
 
 <!-- goes in body -->
 {% block contents %}
+  <div class="background-loader-container d-flex align-items-center">
+    <div class="loader">Loading...</div>
+  </div>
+
     {{ embed(roots.header) }}
 
       <main role="main">
