--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -34,13 +34,9 @@
 
           {{ embed(roots.main) }}
 
-
-        <!-- FOOTER -->
-        <footer class="container">
-          <p class="float-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        </footer>
       </main>
+
+    {{ embed(roots.footer) }}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
