Add syllabus to courses page

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -404,6 +404,11 @@ $course-card-max-width: 300px;
   height: 40px;
 }
 
+.course-syllabus-wrapper {
+  text-align: center;
+  padding: 20px;
+}
+
 .courses-section-header {
   text-align: center;
   margin-bottom: 1rem;
