Add some padding to home page cards

--- a/nick_derobertis_site/landing/components/card/component.html
+++ b/nick_derobertis_site/landing/components/card/component.html
@@ -1,4 +1,4 @@
-<div style="text-align: center">
+<div class="home-page-card">
     <i class="{{ model.icon_class_str }}" aria-hidden="true"></i>
     <h2>{{ model.heading }}</h2>
     <p>{{ model.body_text }}</p>
