--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -46,6 +46,11 @@
   margin-right: 0.1rem;
 }
 
+.home-page-card {
+  text-align: center;
+  padding: 20px;
+}
+
 .software-card-github-button {
   width: 90px;
 }
